fixed dependencies in package.json and added .gitignore

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "express": "*",
     "cookie-session": "*",
-    "connect-multiparty": "*"
+    "body-parser": "*",
+    "connect-multiparty": "*",
+    "ejs": "*"
   }
 }
