--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-  {
+{
   "name": "vectora",
   "version": "0.0.1",
   "private": true,
@@ -17,5 +17,12 @@
     "passport": "*",
     "passport-facebook": "*",
     "passport-google-oauth": "*"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-uglify": "^0.8.1",
+    "grunt-string-replace": "^1.0.0"
   }
 }
